<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>dusk-module</groupId>
    <artifactId>dusk-module-auth</artifactId>
    <version>1.0.0</version>
    <packaging>jar</packaging>
    <name>dusk-module-auth</name>

    <parent>
        <groupId>com.dusk</groupId>
        <artifactId>dusk-module-parent</artifactId>
        <version>1.1.0-SNAPSHOT</version>
        <relativePath/>
    </parent>

    <properties>
        <!--        用于flyway 插件迁移自定义迁移表名-->
        <flyway.table>flyway_schema_history_auth</flyway.table>
        <!--        crux依赖-->
        <dusk-common.version>1.1.0-SNAPSHOT</dusk-common.version>
        <flyway.user>postgres</flyway.user>
        <flyway.url>jdbc:postgresql://dusk.com:5432/dusk</flyway.url>
        <flyway.password>DuskTech@postgre</flyway.password>
    </properties>

    <dependencies>
        <dependency>
            <groupId>com.dusk</groupId>
            <artifactId>dusk-common-core</artifactId>
        </dependency>
        <dependency>
            <groupId>com.dusk</groupId>
            <artifactId>dusk-common-rpc</artifactId>
        </dependency>

        <dependency>
            <groupId>com.dusk</groupId>
            <artifactId>dusk-module-ddm-shared</artifactId>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-security</artifactId>
        </dependency>

        <dependency>
            <groupId>javax.mail</groupId>
            <artifactId>mail</artifactId>
        </dependency>

        <dependency>
            <groupId>com.alibaba</groupId>
            <artifactId>druid-spring-boot-starter</artifactId>
        </dependency>

        <dependency>
            <groupId>org.postgresql</groupId>
            <artifactId>postgresql</artifactId>
            <scope>runtime</scope>
        </dependency>

        <dependency>
            <groupId>com.github.whvcse</groupId>
            <artifactId>easy-captcha</artifactId>
        </dependency>

        <dependency>
            <groupId>com.github.binarywang</groupId>
            <artifactId>weixin-java-miniapp</artifactId>
        </dependency>

        <dependency>
            <groupId>org.bouncycastle</groupId>
            <artifactId>bcprov-jdk15on</artifactId>
        </dependency>

        <dependency>
            <groupId>com.alibaba</groupId>
            <artifactId>easyexcel</artifactId>
        </dependency>

        <dependency>
            <groupId>com.hankcs</groupId>
            <artifactId>hanlp</artifactId>
        </dependency>

        <dependency>
            <groupId>commons-codec</groupId>
            <artifactId>commons-codec</artifactId>
            <!-- 1.15 版本解决了 Base64 decode 最后字符错误问题。1.9也没问题，但1.14就有bug -->
            <version>1.15</version>
        </dependency>

        <dependency>
            <groupId>org.json</groupId>
            <artifactId>json</artifactId>
            <version>20200518</version>
        </dependency>
        <dependency>
            <groupId>fr.opensagres.xdocreport</groupId>
            <artifactId>fr.opensagres.xdocreport.core</artifactId>
        </dependency>
        <dependency>
            <groupId>fr.opensagres.xdocreport</groupId>
            <artifactId>fr.opensagres.xdocreport.document</artifactId>
        </dependency>
        <dependency>
            <groupId>fr.opensagres.xdocreport</groupId>
            <artifactId>fr.opensagres.xdocreport.template</artifactId>
        </dependency>
        <dependency>
            <groupId>fr.opensagres.xdocreport</groupId>
            <artifactId>fr.opensagres.xdocreport.document.docx</artifactId>
        </dependency>
        <dependency>
            <groupId>fr.opensagres.xdocreport</groupId>
            <artifactId>fr.opensagres.xdocreport.template.freemarker</artifactId>
        </dependency>

        <dependency>
            <groupId>io.github.openfeign.querydsl</groupId>
            <artifactId>querydsl-apt</artifactId>
            <version>7.0</version>
        </dependency>
        <dependency>
            <groupId>io.github.openfeign.querydsl</groupId>
            <artifactId>querydsl-jpa</artifactId>
            <version>7.0</version>
        </dependency>
        <dependency>
            <groupId>jakarta.persistence</groupId>
            <artifactId>jakarta.persistence-api</artifactId>
        </dependency>
        <!-- <dependency> -->
        <!--     <groupId>org.projectlombok</groupId> -->
        <!--     <artifactId>lombok</artifactId> -->
        <!--     <version>1.18.36</version> -->
        <!-- </dependency> -->

        <!-- 仅迁移期使用，启动后控制台会打印所有需要改的 key -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-properties-migrator</artifactId>
            <scope>runtime</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>21</source>
                    <target>21</target>
                    <encoding>UTF-8</encoding>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>1.18.32</version>
                        </path>
                        <path>
                            <groupId>jakarta.persistence</groupId>
                            <artifactId>jakarta.persistence-api</artifactId>
                            <version>3.1.0</version>
                        </path>
                        <path>
                            <groupId>org.mapstruct</groupId>
                            <artifactId>mapstruct-processor</artifactId>
                            <version>1.6.3</version>
                        </path>
                        <path>
                            <groupId>io.github.openfeign.querydsl</groupId>
                            <artifactId>querydsl-apt</artifactId>
                            <version>7.0</version>
                        </path>
                        <path>
                            <groupId>io.github.openfeign.querydsl</groupId>
                            <artifactId>querydsl-jpa</artifactId>
                            <version>7.0</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>
            <!-- <plugin> -->
            <!--     <groupId>io.github.openfeign.querydsl</groupId> -->
            <!--     <artifactId>querydsl-maven-plugin</artifactId> -->
            <!--     <version>7.0</version> -->
            <!--     <executions> -->
            <!--         <execution> -->
            <!--             <goals> -->
            <!--                 <goal>jpa-export</goal> -->
            <!--             </goals> -->
            <!--         </execution> -->
            <!--     </executions> -->
            <!--     <configuration> -->
            <!--         <sourceFolder>${project.basedir}/src/main/java</sourceFolder> -->
            <!--         <packageName>com.dusk</packageName> -->
            <!--         <packages>com.dusk</packages> -->
            <!--         <targetFolder>${project.basedir}/src/main/java</targetFolder> -->
            <!--     </configuration> -->
            <!--     <dependencies> -->
            <!--         &lt;!&ndash; 让插件能解析 jakarta 注解 &ndash;&gt; -->
            <!--         <dependency> -->
            <!--             <groupId>jakarta.persistence</groupId> -->
            <!--             <artifactId>jakarta.persistence-api</artifactId> -->
            <!--             <version>3.1.0</version> -->
            <!--         </dependency> -->
            <!--     </dependencies> -->
            <!-- </plugin> -->
        </plugins>
    </build>
</project>
